adjusted send button

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ style="display: none;"
                 <span class="icon"></span>
               </button>
               <div class="accordion-content">
-                <p>For website troubleshooting related to the Stage Fright rock band website, please contact the development team: Kezia Sunil and Nuzhat Nabi. This website is managed under Chapter 02-0807, Hebron High School, based in Lewisville, Texas, in the year 2025.</p>
+                <p>For website troubleshooting related to the Stage Fright rock band website, please contact the development team: Kezia Sunil and Nuzhat Nabi. This website is managed under Chapter 02-0807, Hebron High School, based in Carrollton, Texas, in the year 2025.</p>
               </div>
           </div>
         </div>
@@ -224,7 +224,7 @@ style="display: none;"
             <div class="input-group">
                 <textarea name="message" placeholder="Message" rows="4" required></textarea>
             </div>
-            <button type="submit" id="submit-button">Send</button>
+            <a href="./index.html"><button type="submit" id="submit-button">Send</button></a>
             
         </form>
     </div>
