--- a/checkout.html
+++ b/checkout.html
@@ -650,6 +650,8 @@ footer {
           <input type="text" id="cvv" name="cvv" placeholder="352" required>
 
           <input type="submit" value="Complete Purchase" class="btn">
+          <a href="./index.html"><button type="submit" id="submit-button">Send</button></a>
+
         </form>
       </div>
     </div>
