--- a/checkout.html
+++ b/checkout.html
@@ -649,10 +649,12 @@ footer {
           <label for="cvv">CVV</label>
           <input type="text" id="cvv" name="cvv" placeholder="352" required>
 
-          <input type="submit" value="Complete Purchase" class="btn">
-          <a href="./index.html"><button type="submit" id="submit-button">Send</button></a>
-
+          <form action="./index.html" method="post" id="contact-form">
+            <input type="submit" value="Complete Purchase" class="btn">
         </form>
+        
+
+      
       </div>
     </div>
 
