--- a/Tour.html
+++ b/Tour.html
@@ -157,8 +157,23 @@
                 <p>We couldn't do this without your love and support. You make every show unforgettable, and we can't wait to see you on tour!</p>
                 <p><strong>We love you all!</strong> ❤️</p>
                 <button class="send-love-button" onclick="sendLove()">Send Love</button>
+                <div class="hearts" id="hearts" aria-hidden="true">
+                    <div class="heart">&#10084;</div>
+                    <div class="heart">&#10084;</div>
+                    <div class="heart">&#10084;</div>
+                    <div class="heart">&#10084;</div>
+                    <div class="heart">&#10084;</div>
+                    <div class="heart">&#10084;</div>
+                    <div class="heart">&#10084;</div>
+                    <div class="heart">&#10084;</div>
+                    <div class="heart">&#10084;</div>
+                    <div class="heart">&#10084;</div>
+                    <div class="heart">&#10084;</div>
+                    <div class="heart">&#10084;</div>
+                </div>
             </div>
         </div>
+        
         
     </section>
 
