--- a/Tour.html
+++ b/Tour.html
@@ -151,7 +151,7 @@
 
         </div>
         <div class="thank-you-section">
-            <img src="assets/images/thankyou.webp" alt="Stage Fright Thank You" class="thank-you-photo">
+            <img src="assets/images/tourpic.webp" alt="Stage Fright Thank You" class="thank-you-photo">
             <div class="thank-you-message">
                 <h3>Thank You for Making This Possible!</h3>
                 <p>We couldn't do this without your love and support. You make every show unforgettable, and we can't wait to see you on tour!</p>
