--- a/checkout.html
+++ b/checkout.html
@@ -734,7 +734,7 @@ footer {
         // Clear cart and redirect home after confetti
         localStorage.removeItem('cart');
         setTimeout(() => {
-          window.location.href = '/index.html';  // Redirect to home page
+          window.location.href = './index.html';  // Redirect to home page
         }, 5000);
       }, 1400);
     }
