merch blurb and other stuff in the working

--- a/Merch.html
+++ b/Merch.html
@@ -112,7 +112,11 @@
             </a>
         </div>
     </div>
-
+<!-- Blurb Section -->
+<div class="merch-blurb">
+    <img src="/assets/canva.png" alt="Aesthetic Merch Photo">
+  </div>
+  
     <!-- Merch Section -->
     <main class="merch-section">
         <div class="container">
