--- a/Merch.html
+++ b/Merch.html
@@ -237,6 +237,58 @@
                     <span class="sold-out-message">Sold Out</span>
                     <button disabled>Sold Out</button>
                 </div>
+                <!-- Merch Items -->
+                <div class="item clothing">
+                    <img src="assets/images/merch/T-Shirt.png" alt="T-Shirt">
+                    <h3>Stage Fright T-Shirt</h3>
+                    <p>$25</p>
+                    <select class="size-select">
+                        <option value="S">Small</option>
+                        <option value="M">Medium</option>
+                        <option value="L">Large</option>
+                        <option value="XL">Extra Large</option>
+                    </select>
+                    <button onclick="addToCart('Stage Fright T-Shirt', 25, 'assets/images/merch/T-Shirt.png')">Add to Cart</button>
+                </div>
+                
+                <div class="item clothing">
+                    <img src="assets/images/merch/hoodie2.jpeg" alt="T-Shirt">
+                    <h3>Stage Fright Hoodie</h3>
+                    <p>$35</p>
+                    <select class="size-select">
+                        <option value="S">Small</option>
+                        <option value="M">Medium</option>
+                        <option value="L">Large</option>
+                        <option value="XL">Extra Large</option>
+                    </select>
+                    <button onclick="addToCart('Stage Fright Hoodie', 35, 'assets/images/merch/hoodie2.jpeg')">Add to Cart</button>
+                </div>
+                <div class="item sold-out clothing">
+                    <img src="./assets/images/merch/shirt2.jpeg" alt="T-Shirt">
+                    <h3>Stage Fright T-Shirt</h3>
+                    <p>$25</p>
+                    <select class="size-select">
+                        <option value="S">Small</option>
+                        <option value="M">Medium</option>
+                        <option value="L">Large</option>
+                        <option value="XL">Extra Large</option>
+                    </select>
+                    <span class="sold-out-message">Sold Out</span>
+                    <button disabled>Sold Out</button>
+                </div>
+                <div class="item sold-out clothing">
+                    <img src="./assets/images/merch/shirt2.jpeg" alt="T-Shirt">
+                    <h3>Stage Fright T-Shirt</h3>
+                    <p>$25</p>
+                    <select class="size-select">
+                        <option value="S">Small</option>
+                        <option value="M">Medium</option>
+                        <option value="L">Large</option>
+                        <option value="XL">Extra Large</option>
+                    </select>
+                    <span class="sold-out-message">Sold Out</span>
+                    <button disabled>Sold Out</button>
+                </div>
                 
                 <!-- Add other items similarly -->
             </div>
