merch update checkout nav bar

--- a/Merch.html
+++ b/Merch.html
@@ -135,7 +135,15 @@
             
             <div class="grid">
                 <!-- Merch Items -->
+                <div class="item best-seller">
+                    <img src="./assets/images/merch/cap.jpeg" alt="Stage Fright Cap">
+                    <div class="badge">Best Seller</div>
+                    <h3>Stage Fright Cap</h3>
+                    <p>$25</p>
+                    <button onclick="addToCart('Stage Fright Cap', 25, './assets/images/merch/cap.jpeg')">Add to Cart</button>
+                </div>
                 <div class="item clothing">
+
                     <img src="assets/images/merch/T-Shirt.png" alt="T-Shirt">
                     <h3>Stage Fright T-Shirt</h3>
                     <p>$25</p>
@@ -288,6 +296,13 @@
                     </select>
                     <span class="sold-out-message">Sold Out</span>
                     <button disabled>Sold Out</button>
+                </div>
+                <div class="item best-seller">
+                    <img src="./assets/images/merch/cap.jpeg" alt="Stage Fright Cap">
+                    <div class="badge">Best Seller</div>
+                    <h3>Stage Fright Cap</h3>
+                    <p>$25</p>
+                    <button onclick="addToCart('Stage Fright Cap', 25, './assets/images/merch/cap.jpeg')">Add to Cart</button>
                 </div>
                 
                 <!-- Add other items similarly -->
