--- a/checkout.html
+++ b/checkout.html
@@ -220,7 +220,7 @@
       font-weight: bold;
       z-index: 9999;
     }
-    /* Navbar */
+  /* Navbar */
 .navbar {
     position: fixed;
     top: 0;
@@ -231,9 +231,10 @@
     align-items: center;
     background-color: #000;
     color: #fff;
-    padding: 3px 10px;
+    padding: 0px 10px;
     z-index: 1000;
 }
+
 
 .navbar .nav-links {
     display: flex;
@@ -250,6 +251,47 @@
     color: #ff4500;
 }
 
+@media (max-width: 600px) {
+    .navbar a {
+        margin: 0 5px;
+        font-size: .8em;
+    }
+}
+
+/* General Styling for the Cart Icon */
+/* Cart Icon */
+.cart-icon {
+    position: relative;
+    cursor: pointer;
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    color: #333;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.cart-icon i {
+    font-size: 1.8em;
+    transition: color 0.3s ease;
+}
+
+.cart-icon:hover i {
+    color: #ff6a3d;
+}
+
+.cart-badge {
+    position: absolute;
+    top: -5px;
+    right: -10px;
+    background-color: #ff6a3d;
+    color: white;
+    border-radius: 50%;
+    padding: 4px 8px;
+    font-size: 0.9em;
+    font-weight: bold;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
 
 .nav-logo img {
     height: 60px; /* Adjust logo size */
