--- a/Tour.html
+++ b/Tour.html
@@ -90,8 +90,9 @@
             <a href="./index.html">Home</a>
             <a href="./Tour.html">Tour</a>
             <a href="./Merch.html">Merch</a>
+            <a href="./disco.html">Music</a>
             <a href="./About.html">About</a>
-            <a href="./index.html#contact-container">Contact</a>
+            <a href=#contact-container>Contact</a>
         </div>
         
         <div class="cart-icon" onclick="toggleCart()">
