--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <link rel="stylesheet" href="./css/style.css"/>
+    
     <link rel="stylesheet" href="./css/contactCard.css"/>
 </head>
 
@@ -89,6 +90,7 @@ style="display: none;"
             <a href="./index.html">Home</a>
             <a href="./Tour.html">Tour</a>
             <a href="./Merch.html">Merch</a>
+            <a href="./disco.html">Music</a>
             <a href="./About.html">About</a>
             <a href=#contact-container>Contact</a>
         </div>
