updated about pg

--- a/member-profiles/Alex.html
+++ b/member-profiles/Alex.html
@@ -5,7 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stage Fright</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="../css/style.css"/>
     <link rel="stylesheet" href="../css/profiles.css"/>
+
+    <style>
+        .images, .text{
+            margin-top: 90px;
+        }
+        
+        .text p {
+            padding-top: 15px;
+        }
+
+        @media (max-width: 1005px) {
+            .text{
+                margin-top: 20px;
+            }
+        }
+    </style>
 
 </head>
 <body>
@@ -85,6 +102,7 @@ style="display: none;"
                 <a href="../index.html">Home</a>
                 <a href="../Tour.html">Tour</a>
                 <a href="../Merch.html">Merch</a>
+                <a href="../disco.html">Music</a>
                 <a href="../About.html">About</a>
                 <a href="../index.html#contact-container">Contact</a>
             </div>
@@ -95,10 +113,10 @@ style="display: none;"
 
 
     <div class="flexbox">
-        <div class="images" style="margin-top: 70px">
-            <div class="row"><img class="left-image" src="../assets/images/members/Alex 1.jpg" alt="Young Alex looking at a live performance"/></div>
-            <div class="row"><img class="right-image" src="../assets/images/members/Alex 2.png" alt="Young Alex writing lyrics in his notebook"/></div>
-            <div class="row"><img class="right-image" src="../assets/images/members/Alex 3.jpg" alr="Alex singing on stage"/></div>
+        <div class="images">
+            <div class="row"><img src="../assets/images/members/Alex 1.jpg" alt="Young Alex looking at a live performance"/></div>
+            <div class="row"><img src="../assets/images/members/Alex 2.png" alt="Young Alex writing lyrics in his notebook"/></div>
+            <div class="row"><img src="../assets/images/members/Alex 3.jpg" alr="Alex singing on stage"/></div>
         </div>
 
         <div class="text">
