--- a/member-profiles/Morgan.html
+++ b/member-profiles/Morgan.html
@@ -5,8 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stage Fright</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="../css/style.css"/>
     <link rel="stylesheet" href="../css/profiles.css"/>
 
+    <style>
+        .images, .text{
+            margin-top: 90px;
+        }
+        
+        .text p {
+            padding-top: 15px;
+        }
+
+        @media (max-width: 1005px) {
+            .text{
+                margin-top: 20px;
+            }
+        }
+    </style>
 
 </head>
 <body>
@@ -86,6 +102,7 @@ style="display: none;"
                 <a href="../index.html">Home</a>
                 <a href="../Tour.html">Tour</a>
                 <a href="../Merch.html">Merch</a>
+                <a href="../disco.html">Music</a>
                 <a href="../About.html">About</a>
                 <a href="../index.html#contact-container">Contact</a>
             </div>
