--- a/AboutOld.html
+++ b/AboutOld.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
 
     <link rel="stylesheet" href="./css/style.css"/>
-    <link rel="stylesheet" href="./css/about.css"/>
+    <link rel="stylesheet" href="./css/aboutOld.css"/>
 
 
 </head>
