--- a/Merch.html
+++ b/Merch.html
@@ -115,7 +115,7 @@
     </div>
 <!-- Blurb Section -->
 <div class="merch-blurb">
-    <img src="/assets/canva.png" alt="Aesthetic Merch Photo">
+    <img src="./assets/images/merchCanva.png" alt="Aesthetic Merch Photo">
   </div>
   
     <!-- Merch Section -->
