more header stuff

--- a/disco.html
+++ b/disco.html
@@ -97,7 +97,7 @@
     </div>
     <div class="merch-blurb">
         <video autoplay loop muted>
-            <source src="assets/Stage Fright.mp4" type="video/mp4">
+            <source src="assets/Stage Fright.1111mp4.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
