fixed accessibility issues with profile pages

--- a/About.html
+++ b/About.html
@@ -135,8 +135,8 @@
                 <div class="image-container">
                     <img src="./assets/images/members/drummer.png" alt="Morgan Lee the Drummer" class="member-img">
                     <div class="overlay">
-                        <h3>Morgan</h3>
-                        <p>Lead Guitarist</p>
+                        <h3>Morgan Lee</h3>
+                        <p>Drummer</p>
                         <a href="./member-profiles/Morgan.html"><button class="about-button">Learn More</button></a>
                     </div>
                 </div>
