--- a/member-profiles/Jamie.html
+++ b/member-profiles/Jamie.html
@@ -113,7 +113,7 @@ style="display: none;"
 
 
     <div class="flexbox">
-        <div class="images" style="margin-top: 70px">
+        <div class="images">
             <div class="row"><img src="../assets/images/members/Jamie 1.jpg" alt="Young Jamie looking into the bustling streets of New York"/></div>
             <div class="row"><img src="../assets/images/members/Jamie 2.jpg" alt="Young Jamie discovering a guitar in his father's closet"/></div>
             <div class="row"><img src="../assets/images/members/Jamie 3.jpg" alt="Teenage Jamie playing the electric guitar"/></div>
