--- a/member-profiles/Morgan.html
+++ b/member-profiles/Morgan.html
@@ -113,7 +113,7 @@ style="display: none;"
 
 
     <div class="flexbox">
-        <div class="images" style="margin-top: 70px">
+        <div class="images">
             <div class="row"><img src="../assets/images/members/Morgan 1.jpg" alt="Morgan listening to music in his room"/></div>
             <div class="row"><img src="../assets/images/members/Morgan 2.jpg" alt="Morgan mowing the lawn"/></div>
             <div class="row"><img src="../assets/images/members/Morgan 3.jpg" alt="Morgan playing drums in his garage"/></div>
