--- a/member-profiles/Taylor.html
+++ b/member-profiles/Taylor.html
@@ -113,7 +113,7 @@ style="display: none;"
 
 
     <div class="flexbox">
-        <div class="images" style="margin-top: 70px">
+        <div class="images">
             <div class="row"><img src="../assets/images/members/Taylor 1.jpg" alt="Young Taylor playing a bass guitar for the first time with a punk band"/></div>
             <div class="row"><img src="../assets/images/members/Taylor 2.jpg" alt="Taylor receiving a bass guitar on his 13th birthday"/></div>
             <div class="row"><img src="../assets/images/members/Taylor 3.jpg" alt="Taylor reading a book on a staircase"/></div>
