--- a/disco.html
+++ b/disco.html
@@ -96,11 +96,12 @@
         
     </div>
     <div class="merch-blurb">
-        <video autoplay loop muted>
+        <video autoplay loop muted playsinline>
             <source src="assets/Stage Fright.1111mp4.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
+    
  <!-- Discography Section -->
  <section class="discography">
     <h1 class="pg-name">Discography</h1>
