fixed some stuff

--- a/disco.html
+++ b/disco.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+   <link rel="stylesheet" href="./css/disco.css"/>
     <link rel="stylesheet" href="./css/style.css"/>
     <link rel="stylesheet" href="./css/disco.css"/>
 
@@ -35,7 +36,7 @@
  <div class="toolbar-header">
      <h3>Accessibility Tools</h3>
      <button class="close-button" onclick="toggleAccessibilityToolbar()" aria-label="Close Accessibility Toolbar">
-         ✕
+      x    
      </button>
  </div>
 
@@ -186,7 +187,7 @@
 <div id="song-modal1" class="song-modal">
     <div class="modal-content">
         <span class="close-btn" onclick="closeSongModal('song-modal1')">&times;</span>
-        <h3>Echoes of the Stage - Tracklist</h3>
+        <h3>Echoes of the Stage - Track</h3>
         <ul>
             <li>Track 1: Opening Act</li>
             <li>Track 2: Stage Lights</li>
@@ -200,7 +201,7 @@
 <div id="song-modal2" class="song-modal">
     <div class="modal-content">
         <span class="close-btn" onclick="closeSongModal('song-modal2')">&times;</span>
-        <h3>Into the Spotlight - Tracklist</h3>
+        <h3>Rise from the ashes - Track</h3>
         <ul>
             <li>Track 1: Spotlight</li>
             <li>Track 2: Shine Bright</li>
@@ -214,9 +215,9 @@
 <div id="song-modal3" class="song-modal">
     <div class="modal-content">
         <span class="close-btn" onclick="closeSongModal('song-modal3')">&times;</span>
-        <h3>Reverb - Tracklist</h3>
+        <h3>Love Fright - Track</h3>
         <ul>
-            <li>Track 1: Sound Waves</li>
+            <li>Track 1: Heartbeat</li>
             <li>Track 2: Echo Chamber</li>
             <li>Track 3: Reverb</li>
             <li>Track 4: Amplify</li>
@@ -228,7 +229,7 @@
 <div id="song-modal4" class="song-modal">
     <div class="modal-content">
         <span class="close-btn" onclick="closeSongModal('song-modal4')">&times;</span>
-        <h3>Unplugged - Tracklist</h3>
+        <h3>Stage Fright - Track</h3>
         <ul>
             <li>Track 1: Sound Waves</li>
             <li>Track 2: Quiet Moments</li>
