--- a/disco.html
+++ b/disco.html
@@ -91,7 +91,7 @@
             <a href="./Merch.html">Merch</a>
             <a href="./disco.html">Music</a>
             <a href="./About.html">About</a>
-            <a href=#contact-container>Contact</a>
+            <a href=./index.html#contact-container>Contact</a>
         </div>
         
         
