--- a/Tour.html
+++ b/Tour.html
@@ -92,7 +92,7 @@
             <a href="./Merch.html">Merch</a>
             <a href="./disco.html">Music</a>
             <a href="./About.html">About</a>
-            <a href=#contact-container>Contact</a>
+            <a href=./index.html#contact-container>Contact</a>
         </div>
         
         <div class="cart-icon" onclick="toggleCart()">
