no more flicker

--- a/disco.html
+++ b/disco.html
@@ -214,7 +214,7 @@
 
 <div id="song-modal3" class="song-modal">
     <div class="modal-content">
-        <span class="close-btn" onclick="closeSongModal('song-modal3')">&times;</span>
+        <span class="close-buttn" onclick="closeSongModal('song-modal3')">&times;</span>
         <h3>Love Fright - Track</h3>
         <ul>
             <li>Track 1: Heartbeat</li>
